--- a/partials/_mixin.scss
+++ b/partials/_mixin.scss
@@ -3,8 +3,8 @@
     font-size: 2.5rem;
     border: none;
     border-radius: 50px;
-    box-shadow: 5px 5px 0 blue;
-    transition: all 0.5s;
+    box-shadow: 7px 7px 0 blue;
+    transition: all 0.2s;
     background: white;
     z-index: 999;
     width: 20%;
@@ -12,12 +12,31 @@
     &:focus,
     &:active,
     &:hover {
-        transform: translate(2.5px, 2.5px);
-        box-shadow: 2.5px 2.5px blue;
+        transform: translate(3.5px, 3.5px);
+        box-shadow: 3.5px 3.5px blue;
+    }
+
+    @include mq-768 {
+        box-shadow: 6px 6px 0 blue;
+
+        &:focus,
+        &:active,
+        &:hover {
+            transform: translate(3px, 3px);
+            box-shadow: 3px 3px blue;
+        }
     }
 
     @include mq-420 {
         font-size: 2rem;
+        box-shadow: 5px 5px 0 blue;
+
+        &:focus,
+        &:active,
+        &:hover {
+            transform: translate(2.5px, 2.5px);
+            box-shadow: 2.5px 2.5px blue;
+        }
     }
 }
 
