--- a/styles/style.css
+++ b/styles/style.css
@@ -329,19 +329,33 @@ main .description .levelContainer button {
   font-size: 2.5rem;
   border: none;
   border-radius: 50px;
-  box-shadow: 5px 5px 0 blue;
-  transition: all 0.5s;
+  box-shadow: 7px 7px 0 blue;
+  transition: all 0.2s;
   background: white;
   z-index: 999;
   width: 20%;
 }
 main .description .levelContainer button:focus, main .description .levelContainer button:active, main .description .levelContainer button:hover {
-  transform: translate(2.5px, 2.5px);
-  box-shadow: 2.5px 2.5px blue;
+  transform: translate(3.5px, 3.5px);
+  box-shadow: 3.5px 3.5px blue;
+}
+@media (max-width: 768px) {
+  main .description .levelContainer button {
+    box-shadow: 6px 6px 0 blue;
+  }
+  main .description .levelContainer button:focus, main .description .levelContainer button:active, main .description .levelContainer button:hover {
+    transform: translate(3px, 3px);
+    box-shadow: 3px 3px blue;
+  }
 }
 @media (max-width: 420px) {
   main .description .levelContainer button {
     font-size: 2rem;
+    box-shadow: 5px 5px 0 blue;
+  }
+  main .description .levelContainer button:focus, main .description .levelContainer button:active, main .description .levelContainer button:hover {
+    transform: translate(2.5px, 2.5px);
+    box-shadow: 2.5px 2.5px blue;
   }
 }
 @media (max-width: 1024px) {
@@ -380,21 +394,35 @@ main .description .gameStart button {
   font-size: 2.5rem;
   border: none;
   border-radius: 50px;
-  box-shadow: 5px 5px 0 blue;
-  transition: all 0.5s;
+  box-shadow: 7px 7px 0 blue;
+  transition: all 0.2s;
   width: 50%;
   background: white;
   z-index: 999;
   cursor: pointer;
 }
 main .description .gameStart button:focus, main .description .gameStart button:active, main .description .gameStart button:hover {
-  transform: translate(2.5px, 2.5px);
-  box-shadow: 2.5px 2.5px blue;
+  transform: translate(3.5px, 3.5px);
+  box-shadow: 3.5px 3.5px blue;
+}
+@media (max-width: 768px) {
+  main .description .gameStart button {
+    box-shadow: 6px 6px 0 blue;
+  }
+  main .description .gameStart button:focus, main .description .gameStart button:active, main .description .gameStart button:hover {
+    transform: translate(3px, 3px);
+    box-shadow: 3px 3px blue;
+  }
 }
 @media (max-width: 420px) {
   main .description .gameStart button {
     font-size: 2rem;
     width: 45%;
+    box-shadow: 5px 5px 0 blue;
+  }
+  main .description .gameStart button:focus, main .description .gameStart button:active, main .description .gameStart button:hover {
+    transform: translate(2.5px, 2.5px);
+    box-shadow: 2.5px 2.5px blue;
   }
 }
 @media (max-width: 420px) {
@@ -415,20 +443,24 @@ main .gameBoard {
 }
 main .gameBoard .clock {
   text-align: center;
-  font-size: 3.3rem;
+  font-size: 3rem;
   justify-content: space-between;
   align-items: center;
-  padding: 0;
   height: 13%;
 }
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   main .gameBoard .clock {
     font-size: 2.5rem;
   }
 }
+@media (max-width: 768px) {
+  main .gameBoard .clock {
+    font-size: 2.1rem;
+  }
+}
 @media (max-width: 420px) {
   main .gameBoard .clock {
-    font-size: 2rem;
+    font-size: 1.85rem;
   }
 }
 main .gameBoard .clock .count,
@@ -436,14 +468,8 @@ main .gameBoard .clock .timer {
   margin: 0;
   background: white;
   border-radius: 50px;
-  padding: 0.3% 1%;
+  padding: 1rem;
   position: relative;
-}
-@media (max-width: 1024px) {
-  main .gameBoard .clock .count,
-main .gameBoard .clock .timer {
-    padding: 5px;
-  }
 }
 main .gameBoard .clock .extra10Seconds {
   position: absolute;
@@ -456,12 +482,12 @@ main .gameBoard .clock .extra10Seconds {
 main .gameBoard .clock button {
   font-family: "Cabin Sketch", cursive;
   border: none;
-  font-size: 3.3rem;
+  font-size: 3rem;
   border-radius: 50px;
-  padding: 0.3% 1%;
+  padding: 1.2rem;
   box-shadow: 5px 5px 0 blue;
   background: white;
-  transition: all 0.5s;
+  transition: all 0.2s;
   cursor: pointer;
 }
 main .gameBoard .clock button:focus, main .gameBoard .clock button:active, main .gameBoard .clock button:hover {
@@ -470,18 +496,23 @@ main .gameBoard .clock button:focus, main .gameBoard .clock button:active, main 
 }
 @media (max-width: 1024px) {
   main .gameBoard .clock button {
-    font-size: 3rem;
-    padding: 5px;
+    font-size: 2.5rem;
   }
 }
 @media (max-width: 768px) {
   main .gameBoard .clock button {
-    font-size: 2.5rem;
+    font-size: 2.1rem;
+    box-shadow: 4px 4px 0 blue;
+  }
+  main .gameBoard .clock button:focus, main .gameBoard .clock button:active, main .gameBoard .clock button:hover {
+    transform: translate(2px, 2px);
+    box-shadow: 2px 2px blue;
   }
 }
 @media (max-width: 420px) {
   main .gameBoard .clock button {
-    font-size: 2rem;
+    padding: 0.8rem;
+    font-size: 1.75rem;
   }
 }
 main .gameBoard .clock .bonusTime {
@@ -553,57 +584,61 @@ main .gameBoard .result {
   justify-content: center;
   background: rgba(98, 162, 224, 0.5);
   z-index: 2;
-  padding: 0;
   width: 100vw;
   height: 80%;
   text-align: center;
 }
-@media (max-width: 420px) {
-  main .gameBoard .result {
-    padding: 15px;
-  }
-}
 main .gameBoard .result h2 {
   font-size: 14rem;
-  margin: 45px 0 0;
+  margin: 4.5rem 0 0;
   z-index: 2;
 }
 @media (max-width: 768px) {
   main .gameBoard .result h2 {
-    font-size: 11rem;
-    margin-bottom: 0;
+    font-size: 10rem;
   }
 }
 @media (max-width: 420px) {
   main .gameBoard .result h2 {
     font-size: 8rem;
-    margin-top: 5.5rem;
+    margin-top: 0;
   }
 }
 main .gameBoard .result p {
   font-size: 4rem;
   z-index: 2;
   margin-top: 0;
+  width: 85%;
 }
 @media (max-width: 768px) {
   main .gameBoard .result p {
-    font-size: 3.5rem;
+    font-size: 3rem;
   }
 }
 @media (max-width: 420px) {
   main .gameBoard .result p {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
   }
 }
 main .gameBoard .result p span {
-  font-size: 4rem;
+  font-size: 5.5rem;
   color: blue;
+}
+@media (max-width: 768px) {
+  main .gameBoard .result p span {
+    font-size: 5rem;
+  }
+}
+@media (max-width: 420px) {
+  main .gameBoard .result p span {
+    font-size: 3.5rem;
+  }
 }
 main .gameBoard .result .playAgain {
   font-family: "Cabin Sketch", cursive;
   font-size: 2.5rem;
   border: none;
-  padding: 12px 5%;
+  padding: 1.2rem 5%;
   border-radius: 50px;
   box-shadow: 8px 8px 0 blue;
   transition: all 0.5s;
@@ -619,7 +654,8 @@ main .gameBoard .result .playAgain:focus, main .gameBoard .result .playAgain:act
 @media (max-width: 420px) {
   main .gameBoard .result .playAgain {
     box-shadow: 5px 5px 0 blue;
-    font-size: 2.1rem;
+    font-size: 2rem;
+    margin-bottom: 0;
   }
   main .gameBoard .result .playAgain:focus, main .gameBoard .result .playAgain:active, main .gameBoard .result .playAgain:hover {
     transform: translate(2.5px, 2.5px);
