--- a/styles/style.css
+++ b/styles/style.css
@@ -600,7 +600,7 @@ main .gameBoard .result h2 {
 }
 @media (max-width: 420px) {
   main .gameBoard .result h2 {
-    font-size: 8rem;
+    font-size: 7.5rem;
     margin-top: 0;
   }
 }
@@ -656,6 +656,7 @@ main .gameBoard .result .playAgain:focus, main .gameBoard .result .playAgain:act
     box-shadow: 5px 5px 0 blue;
     font-size: 2rem;
     margin-bottom: 0;
+    padding: 1rem 3.5rem;
   }
   main .gameBoard .result .playAgain:focus, main .gameBoard .result .playAgain:active, main .gameBoard .result .playAgain:hover {
     transform: translate(2.5px, 2.5px);
