--- a/partials/_main.scss
+++ b/partials/_main.scss
@@ -1,20 +1,35 @@
 main {
-    font-family: 'Cabin Sketch', cursive;
     height: 100vh;
     background-image: url(../assets/background.jpeg);
-    background-size: 100% 100%;
+    background-size: cover;
 
     .title {
         text-align: center;
-        font-size: calc(50px + (110 - 50) * ((100vw - 320px) / (1680 - 320)));
+        font-size: calc(80px + (110 - 80) * ((100vw - 1024px) / (1680 - 1024)));
+        padding-top: 6rem;
         margin: 0;
-        padding-top: calc(15px + (60 - 15) * ((100vw - 320px) / (1680 - 320)));
         transition: all 1s;
         height: 20%;
         color: blue;
 
         @include mq-768 {
+            width: 80%;
             height: 15%;
+            padding-top: 3.5rem;
+            margin: 0 auto;
+            font-size: 6.5rem;
+        }
+
+        @include mq-560 {
+            font-size: 6rem;
+        }
+
+        @include mq-420 {
+            font-size: 5rem;
+        }
+
+        @include mq-375 {
+            font-size: 4.5rem;
         }
     }
 
@@ -23,36 +38,71 @@ main {
         height: 80%;
 
         h2 {
-            font-size: calc(35px + (65 - 35) * ((100vw - 320px) / (1680 - 320)));
+            font-size: 6.5rem;
             text-align: center;
             margin: 0;
             height: 20%;
-            padding-top: 5%;
+            padding-top: 8%;
+
+            @include mq-1024 {
+                font-size: 5rem;
+            }
 
             @include mq-768 {
-                padding-top: 12%;
+                padding-top: 9rem;
+                font-size: 4.5rem;
+            }
+
+            @include mq-560 {
+                font-size: 4rem;
+                padding-top: 8.5rem;
             }
 
             @include mq-420 {
-                padding-top: 17%;
+                font-size: 3.5rem;
+                padding-top: 7rem;
+            }
+
+            @include mq-375 {
+                font-size: 3rem;
             }
         }
 
         p {
-            font-size: calc(16px + (25 - 16) * ((100vw - 320px) / (1680 - 320)));
-            line-height: 35px;
+            font-size: 2.5rem;
+            line-height: 4rem;
             text-align: center;
             width: 100%;
             height: 20%;
 
+            @include mq-1024 {
+                font-size: 2.1rem;
+                line-height: 3.6rem;
+            }
+
             @include mq-768 {
                 width: 100%;
-                margin: 0 auto;
-                line-height: calc(30px + (35 - 30) * ((100vw - 320px) / (650 - 320)));
+                font-size: 2rem;
+                line-height: 3.3rem;
+                margin: 1.5rem auto 0;
+                padding-top: 2rem;
+            }
+
+            @include mq-560 {
+                font-size: 1.8rem;
+                line-height: 2.9rem;
+                padding-top: 1rem;
             }
 
             @include mq-420 {
+                padding-top: 0;
+                font-size: 1.7rem;
                 line-height: 2.7rem;
+            }
+
+            @include mq-375 {
+                font-size: 1.55rem;
+                line-height: 2.55rem;
             }
         }
         
@@ -61,8 +111,7 @@ main {
             justify-content: space-between;
             height: 10%;
 
-             button {
-                cursor: pointer;
+            button {
                 @include button();
             }
 
@@ -72,22 +121,28 @@ main {
             
             @include mq-768 {
                 flex-direction: column;
-                width: 35%;
-                margin: 0 auto;
-                height: 30%;
+                width: 14rem;
+                margin: 1rem auto 0;
+                height: 34%;
 
                 button {
                     width: 100%;
-                    padding: 5%;
+                    padding: 1rem;
                 }
             }
 
             @include mq-420 {
-                height: 34%;
+                margin: 0 auto;
+                width: 13rem;
 
                 button {
                     padding: 6%;
+                    font-size: 1.8rem;
                 }
+            }
+
+            @include mq-375 {
+                width: 11rem;
             }
         }
 
@@ -97,468 +152,30 @@ main {
             height: 10%;
             margin-top: 10%;
 
-            button {
-                font-family: 'Cabin Sketch', cursive;
-                font-size: 2.5rem;
-                border: none;
-                border-radius: 50px;
-                box-shadow: 7px 7px 0 blue;
-                transition: all 0.2s;
-                width: 50%;
-                background: white;
-                z-index: 999;
-                cursor: pointer;
-
-                &:focus,
-                &:active,
-                &:hover {
-                    transform: translate(3.5px, 3.5px);
-                    box-shadow: 3.5px 3.5px blue;
-                }
-
-                @include mq-768 {
-                    box-shadow: 6px 6px 0 blue;
-
-                    &:focus,
-                    &:active,
-                    &:hover {
-                        transform: translate(3px, 3px);
-                        box-shadow: 3px 3px blue;
-                    }
-                }
-
-                @include mq-420 {
-                    font-size: 2rem;
-                    width: 45%;
-                    box-shadow: 5px 5px 0 blue;
-                   
-                    &:focus,
-                    &:active,
-                    &:hover {
-                        transform: translate(2.5px, 2.5px);
-                        box-shadow: 2.5px 2.5px blue;
-                    }
-                }
-            }
-
-            @include mq-420 {
-                height: 9%;
-                margin-top: 12%;
-            }
-        }
-    }
-    
-    .gameBoard {
-        height: 80%;
-        position: relative;
-        display: none;
-
-        @include mq-768 {
-            padding-top: 5%;
-        }
-        
-        .clock {
-            text-align: center;
-            font-size: 3rem;
-            justify-content: space-between;
-            align-items: center;
-            height: 13%;
-
-            @include mq-1024 {
-                font-size: 2.5rem;
-            }
-
             @include mq-768 {
-                font-size: 2.1rem;
-            }
-
-            @include mq-420 {
-                font-size: 1.85rem;
-            }
-
-            .count,
-            .timer {
-                margin: 0;
-                background: white;
-                border-radius: 50px;
-                padding: 1rem;
-                position: relative;
-            }
-
-            .extra10Seconds {
-                position: absolute;
-                top: 0;
-                left: 20vw;
-                background: white;
-                padding: 0.3% 1%;
-                border-radius: 50px;
+                height: 8.5%;
             }
 
             button {
-                font-family: 'Cabin Sketch', cursive;
-                border: none;
-                font-size: 3rem;
-                border-radius: 50px;
-                padding: 1.2rem;
-                box-shadow: 5px 5px 0 blue;
-                background: white;
-                transition: all 0.2s;
-                cursor: pointer;
-
-                &:focus,
-                &:active,
-                &:hover {
-                    transform: translate(2.5px, 2.5px);
-                    box-shadow: 2.5px 2.5px blue;
-                }
+                @include button;
+                width: 50%;
 
                 @include mq-1024 {
-                    font-size: 2.5rem;
+                    width: 45%;
                 }
 
-                @include mq-768 {
-                    font-size: 2.1rem;
-                    box-shadow: 4px 4px 0 blue;
-
-                    &:focus,
-                    &:active,
-                    &:hover {
-                        transform: translate(2px, 2px);
-                        box-shadow: 2px 2px blue;
-                    }
+                @include mq-560 {
+                    width: 18rem;
                 }
 
                 @include mq-420 {
-                    padding: 0.8rem;
-                    font-size: 1.75rem;
-                }
-            }
-
-            .bonusTime {
-                opacity: 0;
-            }
-        }
-
-        .container {
-            flex-wrap: wrap;
-            height: 67%;
-            justify-content: space-between;
-            align-items: space-between;
-            display: none;
-            padding: 1.5%;
-            background: rgba(98,162,224,0.5);
-    
-            .card {
-                position: relative;
-                perspective: 700px;
-                width: 21%;
-                height: 21%;
-                z-index: 999;
-                background: none;
-                border: none;
-                transition: all 0.5s;
-                cursor: pointer;
-    
-                &.matched {
-                    transform: scale(0.5);
-                    opacity: 0.7;
-                    border-radius: 50px;
-                }
-                
-                &.flipped .front {
-                    transform: rotateY(0deg);
+                    width: 16rem;
                 }
 
-                &.flipped .back {
-                    transform: rotateY(180deg);
-                }
-                
-
-                &.level2,
-                &.level3 {
-                    width: 17%;
-                    height: 21%;
-                }
-    
-                .front {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    transform: rotateY(-180deg);
-                    transition: all 0.5s;
-                    backface-visibility: hidden;
-                    -webkit-backface-visibility: hidden;
-                    background-color: rgba(98,162,224,0.01);
-                }
-                
-                .back {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    transition: all 0.5s;
-                    backface-visibility: hidden;
-                    -webkit-backface-visibility: hidden;
-                    background-color: rgba(98,162,224,0.01);
-                }
-
-                .matchAnimation {
-                    width: 30px;
-                    height: 30px;
-                    position: absolute;
+                @include mq-375 {
+                    width: 14rem;
                 }
             }
         }
-
-        .result {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            background: rgba(98,162,224,0.5);
-            z-index: 2;
-            width: 100vw;
-            height: 80%;
-            text-align: center;
-
-            h2 {
-                font-size: 14rem;
-                margin: 4.5rem 0 0;
-                z-index: 2;
-
-                @include mq-768 {
-                    font-size: 10rem;
-                }
-
-                @include mq-420 {
-                    font-size: 7.5rem;
-                    margin-top: 0;
-                }
-            }
-
-            p {
-                font-size: 4rem;
-                z-index: 2;
-                margin-top: 0;
-                width: 85%;
-
-                @include mq-768 {
-                    font-size: 3rem;
-                }
-
-                @include mq-420 {
-                    font-size: 2.3rem;
-                }
-
-                span {
-                    font-size: 5.5rem;
-                    color: blue;
-
-                    @include mq-768 {
-                        font-size: 5rem;
-                    }
-
-                    @include mq-420 {
-                        font-size: 3.5rem
-                    }
-                }
-            }
-
-            .playAgain {
-                font-family: 'Cabin Sketch', cursive;
-                font-size: 2.5rem;
-                border: none;
-                padding: 1.2rem 5%;
-                border-radius: 50px;
-                box-shadow: 8px 8px 0 blue;
-                transition: all 0.5s;
-                background: white;
-                margin-bottom: 80px;
-                z-index: 999;
-                cursor: pointer;
-
-                &:focus,
-                &:active,
-                &:hover {
-                    transform: translate(4px, 4px);
-                    box-shadow: 4px 4px blue;
-                }
-
-                @include mq-420 {
-                    box-shadow: 5px 5px 0 blue;
-                    font-size: 2rem;
-                    margin-bottom: 0;
-                    padding: 1rem 3.5rem;
-
-                    &:focus,
-                    &:active,
-                    &:hover {
-                        transform: translate(2.5px, 2.5px);
-                        box-shadow: 2.5px 2.5px blue;
-                    }
-                }
-            }
-        }
-    }
-
-    .mickey {
-        position: absolute;
-        bottom: 0;
-        height: 40vh;
-        width: 32vw;
-
-        @include mq-1024 {
-            width: 32vw;
-            height: 36vh;
-        }
-    }
-
-    .minnie {
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        height: 40vh;
-        width: 32vw;
-
-        @include mq-1024 {
-            width: 32vw;
-            height: 36vh;
-        }
-
-        @include mq-420 {
-            width: 30vw;
-        }
-    }
-
-    .alidin {
-        position: absolute;
-        top: 0;
-        height: 48vh;
-        width: 36vw;
-        opacity: 0;
-        transition: opacity 1s;
-
-        @include mq-1024 {
-            width: 46vw;
-            height: 44vh;
-        }
-
-        @include mq-768 {
-            height: 45vh;
-            width: 50vw;
-        }
-
-        @include mq-420 {
-            width: 54vw;
-            height: 41vh;
-        }
-    }
-
-    .elsa {
-        position: absolute;
-        top: 0;
-        right: 0;
-        height: 46vh;
-        width: 30vw;
-        opacity: 0;
-        transition: opacity 1s;
-
-        .snowFlake:nth-child(odd) {
-            position: absolute;
-            width: 20%;
-            height: 13%;
-            animation: firstSnowFlake 2s ease 1;
-            z-index: 1;
-        }
-
-        .snowFlake:nth-child(even) {
-            position: absolute;
-            width: 20%;
-            height: 13%;
-            animation: secondSnowFlake 2.5s ease 1;
-            z-index: 1;
-        }
-
-        @include mq-1024 {
-            width: 46vw;
-            height: 44vh;
-        }
-
-        @include mq-768 {
-            height: 42vh;
-            width: 50vw;
-        }
-
-        @include mq-420 {
-            height: 39vh;
-            width: 52vw;
-        }
-    }
-}
-
-
-@keyframes firstSnowFlake {
-    0% {
-        top: 35%;
-        left: 0;
-    }
-
-    20% {
-        top: 30%;
-        left: -10%;
-    }
-
-    40% {
-        left: -5%;
-    }
-
-    60% {
-        left: -10%
-    }
-
-    70% {
-        left: -5%;
-    }
-
-    80% {
-        left: -15%;
-    }
-
-    100% {
-        top: 0;
-        left: -10%;
-    }
-}
-
-
-@keyframes secondSnowFlake {
-    0% {
-        top: 35%;
-        left: 0;
-    }
-
-    20% {
-        top: 30%;
-        left: 10%;
-    }
-
-    40% {
-        left: 20%;
-    }
-
-    60% {
-        left: 15%
-    }
-
-    70% {
-        left: 20%;
-    }
-
-    80% {
-        left: 10%;
-    }
-
-    100% {
-        top: 5%;
-        left: 20%;
     }
 }
